# WP-KERNEL-012 MT-089 — `palmistry`: the Tier 3 EXTERNAL out-of-process watcher binary.
#
# Master Spec v02.196 §6.13.2 ("a separate palmistry executable, distinct from the Handshake process")
# + §6.13.3 ("Lifecycle inversion (HARD)"). Palmistry follows the Google-Crashpad architecture: a
# SIBLING process, NOT a thread, NOT an in-process subsystem. It is launched WITH Handshake, closes
# ONLY on an explicit Shutdown command, and SURVIVES the parent's death so it can record + persist the
# evidence precisely when Handshake freezes or crashes (a watcher that dies with its parent cannot
# record the parent's death — §6.13.3 calls that a spec defect).
#
# Standalone [workspace] table: the repo has NO root cargo workspace (see the handshake-native +
# diag_ring Cargo.toml headers — each crate stands alone as its own workspace root). This crate mirrors
# that convention so `cargo build -p palmistry` / `cargo test -p palmistry` run from this dir resolve
# cleanly without being pulled into another crate's workspace.
[workspace]

[package]
name = "palmistry"
version = "0.1.0"
edition = "2021"
publish = false
description = "Handshake Tier 3 external out-of-process watcher (Google-Crashpad model): launched-with, closes-only-on-Shutdown, survives-parent-death. Reads the MT-081 diag ring; controlled over a local socket."

# A library target exposing the watcher's reusable modules (MT-093 added the survivor store + FR
# forwarder). This lets the integration tests under `tests/` drive the REAL production types directly (a
# `[bin]`-only crate's items are not importable by `tests/`), so the binary and the tests exercise the
# SAME code with no test-only reimplementation. The binary is a thin entrypoint over this lib.
[lib]
name = "palmistry"
path = "src/lib.rs"

[[bin]]
name = "palmistry"
path = "src/main.rs"

[dependencies]
# The MT-081 shared-memory ring crate (the substrate BOTH Handshake (writer) and Palmistry (reader)
# link). Relative path dep: this crate is a SIBLING tree of handshake_native, and diag_ring is nested
# under handshake_native, so the path climbs out of palmistry then back down into handshake_native.
# (MT-089 reads liveness PASSIVELY from this ring in MT-090; here we only link it so the protocol +
# record layout compile identically into both processes, and so cli.rs can VALIDATE the ring path opens.)
handshake-diag-ring = { path = "../handshake_native/diag_ring" }
# interprocess 2.x: the field-standard cross-platform local-socket IPC (Unix domain socket / Windows
# named pipe behind one API). The CONTROL channel only (Shutdown/Ping/CrashContext/HandshakeHello) —
# liveness is NEVER requested over this socket (a frozen Handshake could not answer — §6.13.4 / RISK-009-3).
# Verified against crates.io 2026-06-27: latest 2.4.2 (pin "2").
interprocess = "2"
# WP-KERNEL-012 MT-092 (Palmistry CRASH DETECTION + OUT-OF-PROCESS MINIDUMP, §6.13.6) — the Embark
# rust-minidump OUT-OF-PROCESS crash pipeline. Palmistry is the SERVER (the dump WRITER); Handshake is
# the CLIENT. Versions verified against crates.io 2026-06-27:
# - `minidumper` 0.10.1: the client<->server IPC pair. Palmistry runs `minidumper::Server`; on a client
#   `request_dump`, the server reads the CLIENT process's memory CROSS-PROCESS (on Windows via
#   MiniDumpWriteDump with the client's EXCEPTION_POINTERS) and writes the dump OUT-OF-PROCESS — the
#   crashing process never dumps itself (§6.13.6: "the crashing process cannot reliably dump itself; the
#   external writer captures the dump from outside"). Pin "0.10".
# - `minidump-writer` 0.12.0: the actual out-of-process dump writer that `minidumper::Server::run` drives.
#   Declared directly so the family is explicit in the manifest (minidumper consumes the same one). Pin "0.12".
# CRATE-VERSION CORRECTION (the MT contract said "pin crash-context 0.7"): VERIFIED from the registry
# Cargo.toml files that minidumper 0.10.1, minidump-writer 0.12.0, AND crash-handler 0.7.0 ALL depend on
# `crash-context = "0.6"`. Declaring a direct `crash-context = "0.7"` here would (a) DUPLICATE the
# crash-context family (0.6.3 + 0.7.0 — which fails AC-012-6 `cargo tree -d`) and (b) type-mismatch the
# API (the 0.6 `CrashContext` is the type the stack's fns take). So NO direct crash-context dep is
# declared — the single transitive crash-context 0.6.3 the Embark stack pins is the one consistent
# family. The CLIENT side (handshake-native) uses `crash_handler::CrashContext`, re-exported from that
# SAME 0.6 crate. Single crash-context family preserved (AC-012-6 / RISK-012-5).
minidumper = "0.10"
minidump-writer = "0.12"
# `crash-handler` 0.7.0: the CLIENT-side OS-exception installer. Palmistry is normally the SERVER, but
# the binary also hosts a HEADLESS `--crash-client-probe` seam (MT-092 hardening) that runs the REAL
# client install (crash_handler::CrashHandler::attach + simulate_exception) in a SEPARATE process so an
# end-to-end test can cross a REAL process boundary into the `--crash-server-probe` server (proving the
# §6.13.6 out-of-process invariant across processes, not just same-process threads). It depends on the
# SAME crash-context 0.6 family the runtime stack pins (verified `cargo tree -i crash-context`), so no
# duplicate family is introduced (AC-012-6 / RISK-012-5). Pin "0.7".
crash-handler = "0.7"
# Control-message + survivor-record JSON (newline-delimited framing over the local socket).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Palmistry's own logging (separate from Handshake's tracing).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# WP-KERNEL-012 MT-093 (durable SURVIVOR STORE + recovery-time FR FORWARD, §6.13.7). Versions verified
# against crates.io / the handshake-native manifest 2026-06-27 (the same families handshake-native pins,
# so no new family is introduced across the two crates):
# - `dirs` 5: the PORTABLE per-user data dir for the durable survivor store
#   (`dirs::data_local_dir()/handshake/palmistry/survivors/`), the SAME convention as MT-083's crash dir.
dirs = "5"
# - `reqwest` 0.12 (blocking + rustls): the FORWARDER posts the survivor record to the EXISTING verified
#   Flight Recorder route `POST /api/flight_recorder/runtime_chat_event` (reuse-via-API; the FR is
#   forbidden_paths). The BLOCKING client is used because the forward runs on Palmistry's own recovery
#   thread (no tokio runtime in this watcher binary), with a bounded connect+read timeout so a dead/absent
#   FR can never hang the watcher. `default-features=false` + rustls-tls matches handshake-native's pin
#   (no native-tls/OpenSSL pull-in).
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
# - `uuid` 1 (v7 + v4): the FR route REQUIRES a non-nil UUID `session_id` + an `event_id` (verified in
#   event_emitter.rs). HBR-INT-008 (root clippy.toml `disallowed-methods`) mandates `Uuid::now_v7()`
#   (time-ordered) over `new_v4()`, so the code uses `now_v7` (`v7` feature). The `v4` feature is ALSO
#   enabled ONLY so the root clippy.toml's `disallowed-methods` entry for `uuid::Uuid::new_v4` resolves to
#   a reachable function (else clippy warns the disallowed path is unreachable); `new_v4` is never called.
uuid = { version = "1", features = ["v7", "v4"] }
# - `chrono` 0.4: the FR route requires an RFC3339 `ts_utc`; matches handshake-native's pin
#   (default-features off + clock/std for the timestamp only).
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Windows parent-handle wait: OpenProcess(SYNCHRONIZE|PROCESS_QUERY_LIMITED_INFORMATION) +
# WaitForSingleObject + GetExitCodeProcess for the lifecycle inversion (MT-089). MT-091 adds the
# hung-window probe: SendMessageTimeoutW(WM_NULL, SMTO_ABORTIFHUNG|SMTO_BLOCK) + EnumWindows +
# GetWindowThreadProcessId + IsWindowVisible, all under Win32_UI_WindowsAndMessaging (the standard
# Task-Manager 'Not responding' check). Match the handshake-native windows-sys 0.61 pin + feature family
# (Win32_UI_WindowsAndMessaging is already enabled in handshake-native) so the dependency graph stays
# consistent. (minidumper/minidump-writer/crash-context are added in MT-092, NOT here.)
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
# WP-KERNEL-012 MT-092: the `minidump` reader (0.26.1, verified 2026-06-27) VALIDATES, in the crash
# tests, that the dump Palmistry wrote OUT-OF-PROCESS is a well-formed minidump that parses back with at
# least the crashing thread + loaded modules (AC-012-1) — NOT a stub file. Test-only (the watcher writes
# dumps; it never reads them). It pulls its own crash-context transitively but resolves to the SAME 0.6
# family the runtime stack uses (no duplicate — proven by `cargo tree -d`, AC-012-6).
minidump = "0.26"
# WP-KERNEL-012 MT-092: `crash-handler` is the CLIENT-side crash installer the AC-012-1 out-of-process
# proof drives via `simulate_exception` (a real captured context WITHOUT killing the test process). It is
# now a RUNTIME dep (the binary's `--crash-client-probe` seam uses it), so it is NOT redeclared here — the
# runtime dep is in scope for both `src/` and `tests/`. Same 0.7 line + crash-context 0.6 family (no dup).
# The lifecycle proofs spawn a real DUMMY parent process and hard-kill it; serde_json reads the
# survivor/state JSON Palmistry writes. (No new family — serde_json is already a runtime dep.)
serde_json = "1"
